--- a/Incidents_Exploratory.Rmd
+++ b/Incidents_Exploratory.Rmd
@@ -64,4 +64,6 @@ df_2 <- cbind(df,dateonly)
 df_2 <- cbind(df_2,timeonly)
 df_2$dateonly <- as.Date(df_2$dateonly)
 str(df_2)
+
+#this is a test
 ```
