--- a/Exploratory_Airports.ipynb
+++ b/Exploratory_Airports.ipynb
@@ -1609,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1617,6 +1617,7 @@
     "airports_final = airports\n",
     "\n",
     "airports_final = airports_final[airports_final.COUNTRY != 'Canada']\n",
+    "airports_final = airports_final[airports_final.COUNTRY != 'CANADA']\n",
     "airports_final = airports_final[airports_final.COUNTRY != 'Mexico']\n",
     "airports_final = airports_final[airports_final.COUNTRY != 'Bahamas']\n",
     "airports_final = airports_final[airports_final.COUNTRY != 'Kiribati']"
@@ -1624,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1634,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -1804,7 +1805,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>19979 rows × 9 columns</p>\n",
+       "<p>19978 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1847,10 +1848,10 @@
        "20221    TN  \n",
        "20222    IN  \n",
        "\n",
-       "[19979 rows x 9 columns]"
+       "[19978 rows x 9 columns]"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,7 +1900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1923,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -2093,7 +2094,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>19979 rows × 9 columns</p>\n",
+       "<p>19978 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2123,10 +2124,10 @@
        "20221  35.772778  -84.765278     NaN  UNITED STATES  SPRING CITY    TN  \n",
        "20222  39.782821  -86.233322     NaN  UNITED STATES     SPEEDWAY    IN  \n",
        "\n",
-       "[19979 rows x 9 columns]"
+       "[19978 rows x 9 columns]"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2144,12 +2145,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
     "airports_final.to_csv('airports_cleaned.csv', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
