--- a/Exploratory_Airports.ipynb
+++ b/Exploratory_Airports.ipynb
@@ -1609,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,12 +1620,13 @@
     "airports_final = airports_final[airports_final.COUNTRY != 'CANADA']\n",
     "airports_final = airports_final[airports_final.COUNTRY != 'Mexico']\n",
     "airports_final = airports_final[airports_final.COUNTRY != 'Bahamas']\n",
+    "airports_final = airports_final[airports_final.COUNTRY != 'BAHAMAS']\n",
     "airports_final = airports_final[airports_final.COUNTRY != 'Kiribati']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1635,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -1805,7 +1806,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>19978 rows × 9 columns</p>\n",
+       "<p>19952 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1848,10 +1849,10 @@
        "20221    TN  \n",
        "20222    IN  \n",
        "\n",
-       "[19978 rows x 9 columns]"
+       "[19952 rows x 9 columns]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1900,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1924,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -2094,7 +2095,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>19978 rows × 9 columns</p>\n",
+       "<p>19952 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2124,10 +2125,10 @@
        "20221  35.772778  -84.765278     NaN  UNITED STATES  SPRING CITY    TN  \n",
        "20222  39.782821  -86.233322     NaN  UNITED STATES     SPEEDWAY    IN  \n",
        "\n",
-       "[19978 rows x 9 columns]"
+       "[19952 rows x 9 columns]"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2145,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
