Add declination query validation

--- a/Declination.ipynb
+++ b/Declination.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,27 +17,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Method for extracting text from xml file\n",
+    "def getText(nodelist):\n",
+    "    rc = []\n",
+    "    for node in nodelist:\n",
+    "        if node.nodeType == node.TEXT_NODE:\n",
+    "            rc.append(node.data)\n",
+    "    return ''.join(rc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Airports dataset\n",
-    "airports = pd.read_csv('Airports.csv')"
+    "airports = pd.read_csv('airports_cleaned.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "airports['DECLINATION'] = ''\n",
-    "airports"
+    "# Add Declination column to dataset\n",
+    "airports['DECLINATION'] = ''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,40 +61,236 @@
     "day = now.day\n",
     "month = now.month\n",
     "year = now.year\n",
-    "dateString = now.strftime(\"%m/%d/%Y\")\n",
-    "\n",
     "# This will need to be adjusted for incidents to include date of individual incidents and merged into for loop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set base URL for query\n",
+    "url = \"https://www.ngdc.noaa.gov/geomag-web/calculators/calculateDeclination?browserRequest=true&magneticComponent=d&\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Iterate through the dataframe to calculate declination for each row\n",
-    "for index in airports:\n",
-    "    #Output formatting and append line to declination file\n",
-    "    if airports[index]['Y'] > 0:\n",
+    "for i in airports.index:\n",
+    "    # Set hemisphere for lat/long\n",
+    "    if airports['LATITUDE'][i] > 0:\n",
     "        latLabel = 'N'\n",
     "    else:\n",
     "        latLabel = 'S'\n",
-    "    if airports[index]['X'] > 0:\n",
-    "        longLabel = 'E'\n",
+    "    if airports['LONGITUDE'][i] > 0:\n",
+    "        lonLabel = 'E'\n",
     "    else:\n",
-    "        longLabel = 'W'\n",
-    "    #encode URL parameters\n",
-    "    params = urllib.parse.urlencode({'lat1': abs(airports[index]['Y']), 'lat1Hemisphere': latLabel, 'lon1': abs(airports[index]['X']), \n",
-    "                                     'lon1Hemisphere': lonLabel, 'resultFormat': 'xml', 'startYear': year, 'startMonth': month, 'startDay': day})\n",
-    "    req = urllib.request.Request(url, headers = headers)\n",
-    "    #Load XML file\n",
-    "    f = urllib.request.urlopen(\"http://www.https://www.ngdc.noaa.gov/geomag/calculators/magcalc.shtml#declination\" % params)\n",
-    "    #Process XML file into object tree and get only declination info\n",
-    "    dom = xml.dom.minidom.parseString(f.read())\n",
+    "        lonLabel = 'W'\n",
+    "    # Encode URL parameters\n",
+    "    data = urllib.parse.urlencode({'lat1': abs(airports['LATITUDE'][i]), 'lat1Hemisphere': latLabel, 'lon1': abs(airports['LONGITUDE'][i]), 'lon1Hemisphere': lonLabel, 'model': 'WMM', 'startYear': year, 'startMonth': month, 'startDay': day, 'resultFormat': 'xml'})\n",
+    "    url_req = url + data\n",
+    "    # Pass request to site\n",
+    "    req = urllib.request.urlopen(url_req)\n",
+    "    # Process XML file into object tree and get only declination info\n",
+    "    dom = xml.dom.minidom.parseString(req.read().decode(\"UTF-8\"))\n",
     "    myString = getText(dom.getElementsByTagName(\"declination\")[0].childNodes)\n",
-    "    # At this point the string still contains some formatting, this removes it\n",
+    "    # Removes formatting to leave only declination value\n",
     "    declination = str(re.findall(r\"[-+]?\\d*\\.\\d+|\\d+\", myString)[0])\n",
-    "    airports[index]['DECLINATION'] = declination"
+    "    # Sets value for row\n",
+    "    airports.at[i, 'DECLINATION'] = declination"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IDENT</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>LATITUDE</th>\n",
+       "      <th>LONGITUDE</th>\n",
+       "      <th>ICAO_ID</th>\n",
+       "      <th>DECLINATION</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6TS0</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>34.089220</td>\n",
+       "      <td>-101.740461</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.74941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>WY47</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>42.853576</td>\n",
+       "      <td>-106.336415</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.90491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>WA08</td>\n",
+       "      <td>Zwainz Farms</td>\n",
+       "      <td>47.713439</td>\n",
+       "      <td>-117.919989</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.44256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9IN7</td>\n",
+       "      <td>Zupancic Fld</td>\n",
+       "      <td>39.354722</td>\n",
+       "      <td>-86.306944</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-4.69381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1TE4</td>\n",
+       "      <td>Zuehl</td>\n",
+       "      <td>29.495509</td>\n",
+       "      <td>-98.157787</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.68769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19889</th>\n",
+       "      <td>55XA</td>\n",
+       "      <td>1101 East Blvd Deer Park</td>\n",
+       "      <td>29.702772</td>\n",
+       "      <td>-95.101639</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.95632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19890</th>\n",
+       "      <td>WA54</td>\n",
+       "      <td>1001 Fourth Avenue Plaza</td>\n",
+       "      <td>47.606765</td>\n",
+       "      <td>-122.333737</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15.44604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19891</th>\n",
+       "      <td>FA10</td>\n",
+       "      <td>1000 Museum</td>\n",
+       "      <td>25.784228</td>\n",
+       "      <td>-80.190017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-6.97982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19892</th>\n",
+       "      <td>TN41</td>\n",
+       "      <td>100 Aker Wood</td>\n",
+       "      <td>35.772778</td>\n",
+       "      <td>-84.765278</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-5.33458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19893</th>\n",
+       "      <td>IN52</td>\n",
+       "      <td>500</td>\n",
+       "      <td>39.782821</td>\n",
+       "      <td>-86.233322</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-4.80367</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>19894 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      IDENT                      NAME   LATITUDE   LONGITUDE ICAO_ID  \\\n",
+       "0      6TS0                      TRUE  34.089220 -101.740461     NaN   \n",
+       "1      WY47                      TRUE  42.853576 -106.336415     NaN   \n",
+       "2      WA08              Zwainz Farms  47.713439 -117.919989     NaN   \n",
+       "3      9IN7              Zupancic Fld  39.354722  -86.306944     NaN   \n",
+       "4      1TE4                     Zuehl  29.495509  -98.157787     NaN   \n",
+       "...     ...                       ...        ...         ...     ...   \n",
+       "19889  55XA  1101 East Blvd Deer Park  29.702772  -95.101639     NaN   \n",
+       "19890  WA54  1001 Fourth Avenue Plaza  47.606765 -122.333737     NaN   \n",
+       "19891  FA10               1000 Museum  25.784228  -80.190017     NaN   \n",
+       "19892  TN41             100 Aker Wood  35.772778  -84.765278     NaN   \n",
+       "19893  IN52                       500  39.782821  -86.233322     NaN   \n",
+       "\n",
+       "      DECLINATION  \n",
+       "0         5.74941  \n",
+       "1         8.90491  \n",
+       "2        14.44256  \n",
+       "3        -4.69381  \n",
+       "4         3.68769  \n",
+       "...           ...  \n",
+       "19889     1.95632  \n",
+       "19890    15.44604  \n",
+       "19891    -6.97982  \n",
+       "19892    -5.33458  \n",
+       "19893    -4.80367  \n",
+       "\n",
+       "[19894 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "airports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export dataframe to CSV\n",
+    "airports.to_csv('airports_cleaned_w-declination.csv')"
    ]
   },
   {
