--- a/Incidents_Exploratory.Rmd
+++ b/Incidents_Exploratory.Rmd
@@ -36,7 +36,7 @@ summary(df)
 ```
 ## Split up CEDAR Remarks
 ```{r cedar}
-df_2 <- separate(data=df, col=CEDAR.REMARKS, into=c("EVENTTYPE.CEDAR","STATUS.CEDAR","MORID.CEDAR","FACILITY.CEDAR","EVENTDATE.CEDAR","UTCTIME.CEDAR","UTCTIME24.CEDAR","CALENDARDATE.CEDAR","NEARESTAIRPORT.CEDAR","METAR.CEDAR","POTENTIALLYSIGNIFICANT.CEDAR","CALLSIGN.CEDAR","ACTYPE.CEDAR","IFRIVR.CEDAR","AUTHCERT.CEDAR","AIRSPACECLASS.CEDAR","ACLOCATION.CEDAR","ACALTITUDE.CEDAR","ACHEADING.CEDAR","RELATIVECLOCKPOSITION.CEDAR","UASREGISTRATIONNUM.CEDAR","UASLONG.CEDAR","UASLAT.CEDAR","UASTYPE.CEDAR","UASFORMATION.CEDAR","CLOSESTPROXIMITY.CEDAR","UASWEIGHTGT55.CEDAR","UASDIM.CEDAR","UASFWROTOR.CEDAR","UASACTIVITYRISK.CEDAR","UASCOLOR.CEDAR","PILOTREPORTEDNMAC.CEDAR","TCASRA.CEDAR","LEOCONTACT.CEDAR","SUMMARY.CEDAR","QAFINDINGS.CEDAR"),sep="; ")
+df_2 <- separate(data=df, col=CEDAR.REMARKS, into=c("EVENTTYPE.CEDAR","STATUS.CEDAR","MORID.CEDAR","FACILITY.CEDAR","EVENTDATE.CEDAR","UTCTIME.CEDAR","UTCTIME24.CEDAR","CALENDARDATE.CEDAR","NEARESTAIRPORT.CEDAR","METAR.CEDAR","POTENTIALLYSIGNIFICANT.CEDAR","CALLSIGN.CEDAR","ACTYPE.CEDAR","IFRVFR.CEDAR","AUTHCERT.CEDAR","AIRSPACECLASS.CEDAR","ACLOCATION.CEDAR","ACALTITUDE.CEDAR","ACHEADING.CEDAR","RELATIVECLOCKPOSITION.CEDAR","UASREGISTRATIONNUM.CEDAR","UASLONG.CEDAR","UASLAT.CEDAR","UASTYPE.CEDAR","UASFORMATION.CEDAR","CLOSESTPROXIMITY.CEDAR","UASWEIGHTGT55.CEDAR","UASDIM.CEDAR","UASFWROTOR.CEDAR","UASACTIVITYRISK.CEDAR","UASCOLOR.CEDAR","PILOTREPORTEDNMAC.CEDAR","TCASRA.CEDAR","LEOCONTACT.CEDAR","SUMMARY.CEDAR","QAFINDINGS.CEDAR"),sep="; ")
 
 
 
@@ -53,7 +53,7 @@ df_2$METAR.CEDAR <- gsub("METAR: ","",df_2$METAR.CEDAR)
 df_2$POTENTIALLYSIGNIFICANT.CEDAR <- gsub("Potentially Significant: ","",df_2$POTENTIALLYSIGNIFICANT.CEDAR)
 df_2$CALLSIGN.CEDAR <- gsub("Callsign: ","",df_2$CALLSIGN.CEDAR)
 df_2$ACTYPE.CEDAR <- gsub("A/C Type: ","",df_2$ACTYPE.CEDAR)
-df_2$IFRIVR.CEDAR <- gsub("IFR / IVR: ","",df_2$IFRIVR.CEDAR)
+df_2$IFRVFR.CEDAR <- gsub("IFR / VFR: ","",df_2$IFRVFR.CEDAR)
 df_2$AUTHCERT.CEDAR <- gsub("Certificate of Authorization: ","",df_2$AUTHCERT.CEDAR)
 df_2$AIRSPACECLASS.CEDAR <- gsub("Airspace Class: ","",df_2$AIRSPACECLASS.CEDAR)
 df_2$ACLOCATION.CEDAR <- gsub("A/C Location F/R/D: ","",df_2$ACLOCATION.CEDAR)
@@ -160,9 +160,9 @@ df_5 <- df_nstre
 
 ## Write to CSV
 ```{r print}
-write.csv(df_3,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\Incidents_Cleaned.csv",row.names=FALSE)
-write.csv(df_4,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\Incidents_Cleaned_Standard.csv",row.names=FALSE)
-write.csv(df_5,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\Incidents_Cleaned_NonStandard.csv",row.names=FALSE)
+write.csv(df_3,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\00-Incidents_Cleaned.csv",row.names=FALSE)
+write.csv(df_4,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\01-Incidents_Cleaned_Standard.csv",row.names=FALSE)
+write.csv(df_5,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\02-Incidents_Cleaned_NonStandard.csv",row.names=FALSE)
 ```
 
 ## Determining if CEDAR is useful for this analysis
@@ -182,6 +182,273 @@ df_cedar_output <- cbind(df_cedar$REMARKS,nm_stand,df_cedar$SUMMARY.CEDAR,nm_ced
 write.csv(df_cedar_output,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\CEDAR_Output.csv",row.names=FALSE)
 
 nm_cedar2 <- str_extract(df_cedar$SUMMARY.CEDAR,'[0-9]*\\-*[0-9]*\\.*[0-9]\\.*[0-9]*(\\s*(miles|MILES)+\\s*)(NORTH|SOUTH|EAST|WEST|north|(S|s)outh|east|west|N|S|E|W|NW|NE|SW|SE|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW)*(\\s*(of|OF)\\s*[A-Z]{3,})?')
-nm_cedar2
+
+```
+
+## Running extraction on whole dataset
+```{r whole}
+
+#use clean dataset of all records:
+rmks <- df_3
+
+#Total Count of Remarks in SkyWatch per Year
+rmks$year <- year(rmks$dateonly)
+rmks %>% count(year)
+
+#To compare, Standard Remarks in SkyWatch per Year
+df_4$year <- year(df_4$dateonly)
+df_4 %>% count(year)
+
+```
+
+```{r initial extract location information from remarks}
+
+rmks <- df_3 #8633
+
+# Extract all locations marked VOR (to use NAVAID dataset)
+pattern <- c("VOR","vor")
+rmks_vor <- rmks[grep(paste(pattern,collapse="|"),rmks$REMARKS)] #70 (DIVE DEEPER IN {r vor})
+rmks <- rmks[!grep(paste(pattern,collapse="|"),rmks$REMARKS)]    #8563
+
+# Extract all locations marked RWY (to use RUNWAY dataset)
+rmks_rwy <- rmks[grepl("RWY",rmks$REMARKS)] #1239 (DIVE DEEPER)
+rmks <- rmks[!grepl("RWY",rmks$REMARKS)] #7324 (DIVE DEEPER in {r rwy})
+
+write.csv(rmks_rwy,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\05-Incidents_Regex_RWY.csv",row.names=FALSE)
+
+# Attempt to find XXX NM XXX of XXX format (OUT OF 7324)
+rmks$UASLOCATION <- str_extract(rmks$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?(nm|NM)\\s? (NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)*(\\s?(of|OF)\\s?[A-Z]{3,4})')
+
+# Extract all NA locations (OUT OF 8563)
+rmks_na <- rmks[is.na(rmks$UASLOCATION)] #3179 (DIVE DEEPER)
+rmks <- rmks[!is.na(rmks$UASLOCATION)] #4145
+
+write.csv(rmks_na,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\03-Incidents_Regex_AIRPORT.csv",row.names=FALSE) #4182 
+
+```
+
+## Clean up the REMARKS Dataset
+```{r rmks}
+
+rmks_2 <- rmks
+
+# Add spaces where needed
+rmks_2$UASLOCATION <- gsub("([0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*)(NM)","\\1 \\2",rmks_2$UASLOCATION)
+rmks_2$UASLOCATION <- gsub("(of)([A-Z]{3,4})","\\1 \\2",rmks_2$UASLOCATION)
+rmks_2$UASLOCATION <- gsub("([A-Z]{1,3})(of)","\\1 \\2",rmks_2$UASLOCATION)
+
+# Change Direction to letters
+rmks_2$UASLOCATION <- gsub("south","S",rmks_2$UASLOCATION)
+rmks_2$UASLOCATION <- gsub("east","E",rmks_2$UASLOCATION)
+rmks_2$UASLOCATION <- gsub("north","N",rmks_2$UASLOCATION)
+rmks_2$UASLOCATION <- gsub("west","W",rmks_2$UASLOCATION)
+rmks_2$UASLOCATION <- gsub("South","S",rmks_2$UASLOCATION)
+rmks_2$UASLOCATION <- gsub("East","E",rmks_2$UASLOCATION)
+rmks_2$UASLOCATION <- gsub("North","N",rmks_2$UASLOCATION)
+rmks_2$UASLOCATION <- gsub("West","W",rmks_2$UASLOCATION)
+
+#Remove Duplicates (same sighting/different callsign or time)
+rmks_2 <- distinct(rmks_2,dateonly,UASLOCATION,.keep_all=TRUE) #4068
+
+write.csv(rmks_2,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\3.1-Incidents_Regex_AIRPORT_FULLFORMAT.csv",row.names=FALSE) #4068 (DONE: LINK TO AIRPORTS FOR NEXT STEP)
+
+```
+
+## NONSTANDARD data
+```{r nonstandard}
+
+rmks_na2 <- rmks_na
+
+# Attempt to find XXX NM XXX of XXX format (OUT OF 3179)
+rmks_na2$UASLOCATION <- str_extract(rmks_na2$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?(nm|NM)\\s? (NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)(\\s?[A-Z]{3,4})')
+# Extract all NA locations (OUT OF 3179)
+rmks_na3 <- rmks_na2[!is.na(rmks_na2$UASLOCATION)]    #96
+###############################################################################
+###############################################################################
+rmks_na3_na <- rmks_na2[is.na(rmks_na2$UASLOCATION)]  #3083 (DIVE DEEPER)
+
+```
+
+## VOR data
+```{r vor}
+rmks_vor2 <- rmks_vor
+
+# Extract all locations marked RWY (to use RUNWAY dataset)
+rmks_vor_rwy <- rmks_vor2[grepl("RWY",rmks_vor2$REMARKS)] #4 (DIVE DEEPER)
+  # Attempt to find XXX NM XXX of XXX format (OUT OF 4)
+  rmks_vor_rwy$REMARKS <- gsub("Wiregrass","RRS",rmks_vor_rwy$REMARKS) #VOR CODE
+  rmks_vor_rwy$REMARKS <- gsub("Penn Cove","CVV",rmks_vor_rwy$REMARKS) #VOR CODE
+  rmks_vor_rwy$UASLOCATION <- str_extract(rmks_vor_rwy$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?(nm|NM)\\s? (NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)*(\\s?(of|OF)\\s?[A-Z]{3,5})')
+  rmks_vor_rwy$RWYLOCATION <- str_extract(rmks_vor_rwy$REMARKS,'RWY\\s?[0-9]{2}')
+  rmks_vor_rwy$DATASET <- "NAVAID/RUNWAY"
+  # Extract all NA locations (OUT OF 4)
+  rmks_vor_rwy_completed <- rmks_vor_rwy[!is.na(rmks_vor_rwy$UASLOCATION)]   #1
+  rmks_vor_rwy_na <- rmks_vor_rwy[is.na(rmks_vor_rwy$UASLOCATION)]           #3 (DIVE DEEPER)
+    rmks_vor_rwy_na$UASLOCATION <- str_extract(rmks_vor_rwy_na$REMARKS,'([A-Z]{3,5})(\\sVOR)')
+  
+##---->       VOR with RUNWAYS DATASET##
+  rmks_vor_rwy_completed <- rbind(rmks_vor_rwy_completed,rmks_vor_rwy_na)
+    rmks_vor_rwy_completed$RWYLOCATION <- gsub("(RWY)([0-9]{2})","\\1 \\2",rmks_vor_rwy_completed$RWYLOCATION)
+  write.csv(rmks_vor_rwy_completed,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\4.2-Incidents_Regex_VOR_RWY.csv",row.names=FALSE)
+
+rmks_vor2 <- rmks_vor2[!grepl("RWY",rmks_vor2$REMARKS)]   #66
+  # Attempt to find XXX NM XXX of XXX format (OUT OF 66)
+  rmks_vor2$UASLOCATION <- str_extract(rmks_vor2$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?(nm|NM)\\s? (NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)*(\\s?(of|OF)\\s?[A-Z]{3,5})')
+  rmks_vor2$DATASET <- "NAVAID"
+  # Extract all NA locations (OUT OF 66)
+  rmks_vor_completed <- rmks_vor2[!is.na(rmks_vor2$UASLOCATION)]   #33 (GOOD TO GO)
+  rmks_vor2_na <- rmks_vor2[is.na(rmks_vor2$UASLOCATION)]          #33 (DIVE DEEPER)
+    # Attempt to find XXX NM XXX (of) XXX format (modified)
+    rmks_vor2_na$REMARKS <- gsub("Broadway","BWZ",rmks_vor2_na$REMARKS) #VOR CODE
+    rmks_vor2_na$REMARKS <- gsub("Calverton","CCC",rmks_vor2_na$REMARKS) #VOR CODE
+    rmks_vor2_na$REMARKS <- gsub("Wasatch","TCH",rmks_vor2_na$REMARKS) #VOR CODE
+    rmks_vor2_na$REMARKS <- gsub("the TRV","TRV",rmks_vor2_na$REMARKS) #VOR CODE
+    rmks_vor2_na$REMARKS <- gsub("Morgantown","of MGW",rmks_vor2_na$REMARKS) #VOR CODE
+    rmks_vor2_na$REMARKS <- gsub("Dolphin","DHP",rmks_vor2_na$REMARKS) #VOR CODE
+    rmks_vor2_na$REMARKS <- gsub("the Squaw Valley, CA \\(SWR\\)","SWR",rmks_vor2_na$REMARKS) #VOR CODE
+    rmks_vor2_na$REMARKS <- gsub("Solberg","SBJ",rmks_vor2_na$REMARKS) #VOR CODE
+    rmks_vor2_na$UASLOCATION <- str_extract(rmks_vor2_na$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?(nm|NM)\\s?(NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)(\\s?(of|OF)*\\s?)([A-Z]{3,5})')
+    # Extract all NA locations (OUT OF 33)
+    rmks_vor3 <- rmks_vor2_na[!is.na(rmks_vor2_na$UASLOCATION)]    #12
+      rmks_vor3$UASLOCATION <- gsub("south","S",rmks_vor3$UASLOCATION)
+      rmks_vor3$UASLOCATION <- gsub("([0-9]*[0-9]NM\\s?)([A-Z]{1,3}\\s)([A-Z]{3,5})","\\1\\2of \\3",rmks_vor3$UASLOCATION)
+      rmks_vor_completed <- rbind(rmks_vor_completed,rmks_vor3) #45
+      
+##---->       VOR with FULL FORMAT DATASET##
+      write.csv(rmks_vor_completed,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\4.1-Incidents_Regex_VOR_FULLFORMAT.csv",row.names=FALSE)
+      
+    rmks_vor3_na <- rmks_vor2_na[is.na(rmks_vor2_na$UASLOCATION)] #21 (DIVE DEEPER)
+      # Attempt to find XXX miles XXX (of) XXX format (modified)
+      rmks_vor3_na$REMARKS <- gsub("Fairfield","FFU",rmks_vor3_na$REMARKS) #VOR CODE
+      rmks_vor3_na$UASLOCATION <- str_extract(rmks_vor3_na$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?((M|m)iles|MILES)\\s?(NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)(\\s?(of|OF)*\\s?)([A-Z]{3,5})')
+      # Extract all NA locations (OUT OF 29)
+      rmks_vor4 <- rmks_vor3_na[!is.na(rmks_vor3_na$UASLOCATION)]    #2
+        rmks_vor4$UASLOCATION <- gsub("north","N",rmks_vor4$UASLOCATION)
+        rmks_vor4$UASLOCATION <- gsub("([0-9]*[0-9]\\s?miles\\s?)([A-Z]{1,3}\\s)([A-Z]{3,5})","\\1\\2of \\3",rmks_vor4$UASLOCATION)
+        rmks_vor_completed <- rbind(rmks_vor_completed,rmks_vor4) #47
+      rmks_vor4_na <- rmks_vor3_na[is.na(rmks_vor3_na$UASLOCATION)] #19 (DIVE DEEPER)
+        # Attempt to find XXX miles XXX (of) (XXX) format (modified)
+        rmks_vor4_na$REMARKS <- gsub("Shafter","MIT",rmks_vor4_na$REMARKS) #VOR CODE
+        rmks_vor4_na$REMARKS <- gsub("Treasure","TRV",rmks_vor4_na$REMARKS) #VOR CODE
+        rmks_vor4_na$UASLOCATION <- str_extract(rmks_vor4_na$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?(NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)(\\s?(of|OF)*\\s?)([A-Z]{3,5})')
+        # Extract all NA locations (OUT OF 19)
+        rmks_vor5 <- rmks_vor4_na[!is.na(rmks_vor4_na$UASLOCATION)]    #3
+        rmks_vor5$UASLOCATION <- gsub("west","W",rmks_vor5$UASLOCATION)
+        rmks_vor_completed <- rbind(rmks_vor_completed,rmks_vor5) #50
+          
+##---->       VOR with NONM##
+        write.csv(rmks_vor5,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\4.3-Incidents_Regex_VOR_NONM.csv",row.names=FALSE)
+          
+        rmks_vor5_na <- rmks_vor4_na[is.na(rmks_vor4_na$UASLOCATION)] #16 (DIVE DEEPER)
+          rmks_vor5_na$REMARKS <- gsub("Sea Isle VORTAC","SIE VOR",rmks_vor5_na$REMARKS) #VOR CODE
+          rmks_vor5_na$REMARKS <- gsub("Cowboy","CVE",rmks_vor5_na$REMARKS) #VOR CODE
+          rmks_vor5_na$REMARKS <- gsub("OCN, Oceanside","OCN",rmks_vor5_na$REMARKS) #VOR CODE
+          rmks_vor5_na$REMARKS <- gsub("ofDPA","DPA",rmks_vor5_na$REMARKS) #VOR CODE
+          rmks_vor5_na$REMARKS <- gsub("Yardley VOR \\(ADR\\)","ADR VOR",rmks_vor5_na$REMARKS) #VOR CODE
+          rmks_vor5_na$REMARKS <- gsub("MLFVOR","MLF VOR",rmks_vor5_na$REMARKS) #VOR CODE
+          rmks_vor5_na$REMARKS <- gsub("PZD, Pecan","PZD",rmks_vor5_na$REMARKS) #VOR CODE
+          rmks_vor5_na$UASLOCATION <- str_extract(rmks_vor5_na$REMARKS,'([A-Z]{3,5})(\\sVOR)')
+          
+##---->       VOR with VICINITYONLY##
+          write.csv(rmks_vor5_na,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\4.4-Incidents_Regex_VOR_VICINITYONLY.csv",row.names=FALSE)
+          
+          rmks_vor_completed <- rbind(rmks_vor_completed,rmks_vor5_na) #66
+          rmks_vor_completed <- rbind(rmks_vor_completed,rmks_vor_rwy_completed, fill=TRUE)
+
+rmks_vor_completed <- arrange(rmks_vor_completed,DATE)
+#Remove Duplicates (same sighting/different callsign or time)
+rmks_vor_completed <- distinct(rmks_vor_completed,dateonly,UASLOCATION,.keep_all=TRUE) #68
+        
+write.csv(rmks_vor_completed,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\04-Incidents_Regex_VOR.csv",row.names=FALSE) #68 ##(DONE: LINK TO NAVAID FOR NEXT STEP)##
+
+```
+
+## Cleaning Remaining Files from Grace
+```{r grace}
+file <- "std_missing_30_ALLROWS.csv"
+std <- read.csv(file,header = TRUE, stringsAsFactors = FALSE, na.strings=c("NA","N/A","","na","Na","n/a","N/a","NaN","nA"))
+setDT(std)
+
+# Extract all locations marked VOR (to use NAVAID dataset)
+pattern <- c("VOR","vor")
+std$REMARKS <- gsub("RIS","RIS VOR",std$REMARKS) #RIS is Riverside VOR in MO
+std$REMARKS <- gsub("CQO","CQO VOR",std$REMARKS) #CQO is Choo Choo VOR in TN #Different Source says GQO
+std$REMARKS <- gsub("WASATEC","TCH",std$REMARKS) #TCH is Wasatch VOR in UT #REMARKS MISPELLED
+std_vor <- std[grep(paste(pattern,collapse="|"),std$REMARKS)] #3 (DIVE DEEPER)
+  # Attempt to find XXX NM XXX of XXX format (OUT OF 13)
+  std_vor$UASLOCATION <- str_extract(std_vor$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?(nm|NM)\\s? (NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)*(\\s?(of|OF)\\s?[A-Z]{3,4})')
+  std_vor$DATASET <- "NAVAID"
+  std_vor$UASLOCATION <- gsub("([0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*)(NM)","\\1 \\2",std_vor$UASLOCATION)
+  std_completed <- std_vor #3
+  
+##---->       GRACE INCIDENTS with VOR DATASET##
+    write.csv(std_vor,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\6.3-Grace_Incidents_VOR.csv",row.names=FALSE) #14 #DONE  
+  
+std <- std[!grep(paste(pattern,collapse="|"),std$REMARKS)]    #27 (DIVE DEEPER {RWY AND REGULAR})
+  # Extract all locations marked RWY (to use RUNWAY dataset)
+  std_rwy <- std[grepl("RWY",std$REMARKS)] #14
+  std_rwy$DATASET <- "AIRPORT/RUNWAY"
+    # Attempt to find XXX NM XXX of XXX format (OUT OF 14)
+    std_rwy$UASLOCATION <- str_extract(std_rwy$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?(nm|NM)\\s? (NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)*(\\s?(of|OF))')
+    # Extract all NA locations (OUT OF 8563)
+    std2_rwy_na <- std_rwy[is.na(std_rwy$UASLOCATION)] #0
+    std2_rwy <- std_rwy[!is.na(std_rwy$UASLOCATION)] #13
+      std2_rwy$UASLOCATION <- gsub("([0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*)(NM)","\\1 \\2",std2_rwy$UASLOCATION)
+      std2_rwy$UASLOCATION <- gsub("([A-Z]{1,3})(of)","\\1 \\2",std2_rwy$UASLOCATION)
+      std2_rwy$UASLOCATION <- paste(std2_rwy$UASLOCATION,std2_rwy$REPORTINGFACILITY)
+        # SIG is Puerto Rico Airport
+        # END is AFB
+        std$REMARKS <- gsub("L30","LAS",std$REMARKS) #L30 is AREA, LAS is Airport
+      std2_rwy$RWYLOCATION <- str_extract(std2_rwy$REMARKS,'RWY\\s?[0-9]{1,2}[L|R]?')
+      std2_rwy$RWYLOCATION <- gsub("(RWY)([0-9]{1,2})","\\1 \\2",std2_rwy$RWYLOCATION)
+      std2_rwy$RWYLOCATION <- gsub("(RWY\\s)(8|9)","\\10\\2",std2_rwy$RWYLOCATION)
+      std_completed <- rbind(std_completed,std2_rwy, fill=TRUE) #17
+      
+##---->       GRACE INCIDENTS with RUNWAYS DATASET##
+    write.csv(std2_rwy,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\6.2-Grace_Incidents_RWY.csv",row.names=FALSE) #14 #DONE
+  
+  # Extract all other locations 
+  std <- std[!grepl("RWY",std$REMARKS)] #13
+  std$DATASET <- "AIRPORT"
+    # Attempt to find XXX NM XXX of XXX format (OUT OF 13)
+    #OUC - PAMLICO NDB Lat/Long 35°9'30.60"N, 76°45'45.73"W
+    #BEQ - BESSEMER NDB (EKY) Lat/Long 33°18'45.40"N, 86°55'34.70"W
+    #BURDY (waypoint) Lat/long 	41°57'19.140"N, 70°57'07.450"W
+    #CEDES (waypoint) Lat/long 	37°33'02.960"N, 121°37'28.510"W
+    #HSN ??? - Taking from Reporting Facility
+    #HUB ??? - Taking from Most Likely, HOU
+    std$REMARKS <- gsub("FTG","CFO",std$REMARKS) #OUTDATED CODE
+    std$REMARKS <- gsub("XXX","FFZ",std$REMARKS) #MISSING CODE FROM REPORTING FACILITY
+    std$REMARKS <- gsub("UOA","UAO",std$REMARKS) #TYPO, FROM REPORTING FACILITY
+    std$REMARKS <- gsub("DEM","DEN",std$REMARKS) #MOST LIKELY TYPO ## D01 IS AREA, DEN IS FACILITY
+    std$REMARKS <- gsub("HUB","HOU",std$REMARKS) #I09 is AREA, HOU IS MOST LIKELY FACILITY
+    std$REMARKS <- gsub("HEMET","HMT",std$REMARKS) #HEMET IS NAME OF AIRPORT, HMT IS CODE
+    std$REMARKS <- gsub("HSN","OKC",std$REMARKS) #FROM REPORTING FACILITY
+    std$REMARKS <- gsub("LIV","LKV",std$REMARKS) #TYPO, FROM PD NOTIF
+    std$REMARKS <- gsub("BEQ","EKY",std$REMARKS) #From OPENNAV
+    std$UASLOCATION <- str_extract(std$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?(nm|NM)\\s? (NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)*(\\s?(of|OF)\\s?[A-Z]{3,5})')
+    # Extract all NA locations (OUT OF 8563)
+    std2_na <- std[is.na(std$UASLOCATION)] #0
+    std2 <- std[!is.na(std$UASLOCATION)] #13
+      std2$UASLOCATION <- gsub("([0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*)(NM)","\\1 \\2",std2$UASLOCATION)
+      pattern <- c("BURDY","CEDES")
+      std3 <- std2[!grep(paste(pattern,collapse="|"),std2$REMARKS)] #11
+      std_completed <- rbind(std_completed,std3, fill=TRUE) #28
+    
+##---->       GRACE INCIDENTS with FULL FORMAT DATASET##
+        write.csv(std3,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\6.1-Grace_Incidents_AIRPORT_FULLFORMAT.csv",row.names=FALSE) #11 #DONE
+      std_waypoint <- std2[grep(paste(pattern,collapse="|"),std2$REMARKS)] #2
+      std_waypoint$waypoint_lat <- c("41° 57' 19.140\" N","37° 33' 02.960\" N")
+      std_waypoint$waypoint_long <- c("86° 55' 34.70\" W","121° 37' 28.510\" W")
+      std_waypoint$DATASET <- "LAT/LONG PROVIDED"
+      std_completed <- rbind(std_completed,std_waypoint, fill=TRUE) #30
+    
+##---->       GRACE INCIDENTS with WAYPOINTS DATASET##
+      write.csv(std_waypoint,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\6.4-Grace_Incidents_AIRPORT_WAYPOINTS.csv",row.names=FALSE) #2 DONE
+      
+std_completed <- arrange(std_completed,DATE)
+#Remove Duplicates (same sighting/different callsign or time)
+std_completed <- distinct(std_completed,dateonly,UASLOCATION,.keep_all=TRUE) #68
+  write.csv(std_completed,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\06-Grace_Incidents_AIRPORT.csv",row.names=FALSE) #30 #DONE    
 
 ```
