--- a/Incidents_Exploratory.Rmd
+++ b/Incidents_Exploratory.Rmd
@@ -205,14 +205,29 @@ df_4 %>% count(year)
 
 rmks <- df_3 #8633
 
+rmks$REMARKS <- gsub("(NM)([A-Z]{1,3})","\\1 \\2",rmks$REMARKS)
+rmks$REMARKS <- gsub("([0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*)(NM)","\\1 \\2",rmks$REMARKS)
+rmks$REMARKS <- gsub("(of)([A-Z]{3,4})","\\1 \\2",rmks$REMARKS)
+rmks$REMARKS <- gsub("([A-Z]{1,3})(of)","\\1 \\2",rmks$REMARKS)
+rmks$REMARKS <- gsub("([A-Z]{1,3})(\\s[A-Z]{3,4}$)","\\1 of\\2",rmks$REMARKS)
+rmks$REMARKS <- gsub("(RWY)([0-9]{1,2}[L|R]?)","\\1 \\2",rmks$REMARKS)
+rmks$REMARKS <- gsub("south","S",rmks$REMARKS)
+rmks$REMARKS <- gsub("east","E",rmks$REMARKS)
+rmks$REMARKS <- gsub("north","N",rmks$REMARKS)
+rmks$REMARKS <- gsub("west","W",rmks$REMARKS)
+rmks$REMARKS <- gsub("South","S",rmks$REMARKS)
+rmks$REMARKS <- gsub("East","E",rmks$REMARKS)
+rmks$REMARKS <- gsub("North","N",rmks$REMARKS)
+rmks$REMARKS <- gsub("West","W",rmks$REMARKS)
+
 # Extract all locations marked VOR (to use NAVAID dataset)
 pattern <- c("VOR","vor")
-rmks_vor <- rmks[grep(paste(pattern,collapse="|"),rmks$REMARKS)] #70 (DIVE DEEPER IN {r vor})
+rmks_vor <- rmks[grep(paste(pattern,collapse="|"),rmks$REMARKS)] #70 (DIVE DEEPER IN {r vor}) ##DONE
 rmks <- rmks[!grep(paste(pattern,collapse="|"),rmks$REMARKS)]    #8563
 
 # Extract all locations marked RWY (to use RUNWAY dataset)
-rmks_rwy <- rmks[grepl("RWY",rmks$REMARKS)] #1239 (DIVE DEEPER)
-rmks <- rmks[!grepl("RWY",rmks$REMARKS)] #7324 (DIVE DEEPER in {r rwy})
+rmks_rwy <- rmks[grepl("RWY",rmks$REMARKS)] #1239 (DIVE DEEPER in {r rwy})
+rmks <- rmks[!grepl("RWY",rmks$REMARKS)] #7324 (DIVE DEEPER)
 
 write.csv(rmks_rwy,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\05-Incidents_Regex_RWY.csv",row.names=FALSE)
 
@@ -220,52 +235,61 @@ write.csv(rmks_rwy,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\05-I
 rmks$UASLOCATION <- str_extract(rmks$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?(nm|NM)\\s? (NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)*(\\s?(of|OF)\\s?[A-Z]{3,4})')
 
 # Extract all NA locations (OUT OF 8563)
-rmks_na <- rmks[is.na(rmks$UASLOCATION)] #3179 (DIVE DEEPER)
-rmks <- rmks[!is.na(rmks$UASLOCATION)] #4145
-
-write.csv(rmks_na,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\03-Incidents_Regex_AIRPORT.csv",row.names=FALSE) #4182 
-
-```
-
-## Clean up the REMARKS Dataset
-```{r rmks}
-
-rmks_2 <- rmks
-
-# Add spaces where needed
-rmks_2$UASLOCATION <- gsub("([0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*)(NM)","\\1 \\2",rmks_2$UASLOCATION)
-rmks_2$UASLOCATION <- gsub("(of)([A-Z]{3,4})","\\1 \\2",rmks_2$UASLOCATION)
-rmks_2$UASLOCATION <- gsub("([A-Z]{1,3})(of)","\\1 \\2",rmks_2$UASLOCATION)
-
-# Change Direction to letters
-rmks_2$UASLOCATION <- gsub("south","S",rmks_2$UASLOCATION)
-rmks_2$UASLOCATION <- gsub("east","E",rmks_2$UASLOCATION)
-rmks_2$UASLOCATION <- gsub("north","N",rmks_2$UASLOCATION)
-rmks_2$UASLOCATION <- gsub("west","W",rmks_2$UASLOCATION)
-rmks_2$UASLOCATION <- gsub("South","S",rmks_2$UASLOCATION)
-rmks_2$UASLOCATION <- gsub("East","E",rmks_2$UASLOCATION)
-rmks_2$UASLOCATION <- gsub("North","N",rmks_2$UASLOCATION)
-rmks_2$UASLOCATION <- gsub("West","W",rmks_2$UASLOCATION)
-
-#Remove Duplicates (same sighting/different callsign or time)
-rmks_2 <- distinct(rmks_2,dateonly,UASLOCATION,.keep_all=TRUE) #4068
-
-write.csv(rmks_2,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\3.1-Incidents_Regex_AIRPORT_FULLFORMAT.csv",row.names=FALSE) #4068 (DONE: LINK TO AIRPORTS FOR NEXT STEP)
+rmks_na <- rmks[is.na(rmks$UASLOCATION)] #3142 (DIVE DEEPER in {r nonstandard}
+  write.csv(rmks_na,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\03-Incidents_Regex_AIRPORT_NEEDSMODIFIED.csv",row.names=FALSE) #3142
+rmks <- rmks[!is.na(rmks$UASLOCATION)] #4182
+  rmks$DATASET <- "AIRPORT"
+  #Remove Duplicates (same sighting/different callsign or time)
+  rmks <- distinct(rmks,dateonly,UASLOCATION,.keep_all=TRUE) #4104
+  write.csv(rmks,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\3.1-Incidents_Regex_AIRPORT_FULLFORMAT.csv",row.names=FALSE) #4104 (DONE: LINK TO AIRPORTS FOR NEXT STEP)
 
 ```
 
 ## NONSTANDARD data
 ```{r nonstandard}
 
-rmks_na2 <- rmks_na
+rmks_na2 <- rmks_na 
+  rmks_na2$DATASET <- "AIRPORT"
 
-# Attempt to find XXX NM XXX of XXX format (OUT OF 3179)
-rmks_na2$UASLOCATION <- str_extract(rmks_na2$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?(nm|NM)\\s? (NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)(\\s?[A-Z]{3,4})')
-# Extract all NA locations (OUT OF 3179)
-rmks_na3 <- rmks_na2[!is.na(rmks_na2$UASLOCATION)]    #96
-###############################################################################
-###############################################################################
-rmks_na3_na <- rmks_na2[is.na(rmks_na2$UASLOCATION)]  #3083 (DIVE DEEPER)
+  # Attempt to find XXX NM XXX of XXX format (OUT OF 3142)
+  rmks_na2$UASLOCATION <- str_extract(rmks_na2$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?(nm|NM)\\s? (NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)(\\s?[A-Z]{3,4})')
+  # Extract all NA locations (OUT OF 3179)
+  rmks_na3 <- rmks_na2[!is.na(rmks_na2$UASLOCATION)]    #96
+    rmks_nonstd_completed <- rmks_na3 #96
+  
+##---->       NON-STANDARD DATASET (missing "of")##
+    write.csv(rmks_na3,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\3.2-Incidents_Regex_AIRPORT_NONSTD_SET1.csv",row.names=FALSE) #96
+
+  rmks_na3_na <- rmks_na2[is.na(rmks_na2$UASLOCATION)]  #3046 (DIVE DEEPER)
+  # Attempt to find XXX NM XXX of XXX format (OUT OF 3142)
+  rmks_na3_na$UASLOCATION <- str_extract(rmks_na3_na$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s? (NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)(\\s?(of|OF)\\s?[A-Z]{3,4})')
+  # Extract all NA locations (OUT OF 3179)
+  rmks_na4 <- rmks_na3_na[!is.na(rmks_na3_na$UASLOCATION)]    #173
+    rmks_nonstd_completed <- rbind(rmks_nonstd_completed,rmks_na4) #269
+  
+##---->       NON-STANDARD DATASET (missing "NM")##
+    write.csv(rmks_na4,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\3.3-Incidents_Regex_AIRPORT_NONSTD_SET2.csv",row.names=FALSE) #96  
+  
+  rmks_na4_na <- rmks_na3_na[is.na(rmks_na3_na$UASLOCATION)]    #2873 (DIVE DEEPER)
+  # Attempt to find XXX NM XXX of XXX format (OUT OF 2873)
+  rmks_na4_na$UASLOCATION <- str_extract(rmks_na4_na$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?(nm|NM)\\s? (NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)')
+  # Extract all NA locations (OUT OF 2940)
+  rmks_na5 <- rmks_na4_na[!is.na(rmks_na4_na$UASLOCATION)]    #409
+    rmks_na5$UASLOCATION <- paste(rmks_na5$UASLOCATION,"of",rmks_na5$REPORTINGFACILITY)
+    rmks_nonstd_completed <- rbind(rmks_nonstd_completed,rmks_na5) #678
+    
+#!!!!!!!##---->       NON-STANDARD DATASET (TAKEN FROM REPORTING FACILITY:: NEEDS IMMEDIATE ATTENTION FOR CLEANING)##
+    write.csv(rmks_na5,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\3.4-Incidents_Regex_AIRPORT_NONSTD_SET3.csv",row.names=FALSE) #409
+    
+  rmks_na5_na <- rmks_na4_na[is.na(rmks_na4_na$UASLOCATION)]    #2464
+    # Attempt to find XXX NM XXX of XXX format (OUT OF 2464)
+    rmks_na5_na$UASLOCATION <- str_extract(rmks_na5_na$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?((M|m)iles|MILES)\\s?(NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)(\\s?(of|OF)*\\s?)([A-Z]{3,5})')
+    # Extract all NA locations (OUT OF 2940)
+  rmks_na6 <- rmks_na5_na[!is.na(rmks_na5_na$UASLOCATION)]    #127
+    rmks_nonstd_completed <- rbind(rmks_nonstd_completed,rmks_na6)
+  rmks_na6_na <- rmks_na5_na[is.na(rmks_na5_na$UASLOCATION)]    #2337  
+
+write.csv(rmks_na6_na,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\3.5-Incidents_Regex_AIRPORT_NONSTD_SET4.csv",row.names=FALSE)
 
 ```
 
@@ -279,7 +303,7 @@ rmks_vor_rwy <- rmks_vor2[grepl("RWY",rmks_vor2$REMARKS)] #4 (DIVE DEEPER)
   rmks_vor_rwy$REMARKS <- gsub("Wiregrass","RRS",rmks_vor_rwy$REMARKS) #VOR CODE
   rmks_vor_rwy$REMARKS <- gsub("Penn Cove","CVV",rmks_vor_rwy$REMARKS) #VOR CODE
   rmks_vor_rwy$UASLOCATION <- str_extract(rmks_vor_rwy$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?(nm|NM)\\s? (NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)*(\\s?(of|OF)\\s?[A-Z]{3,5})')
-  rmks_vor_rwy$RWYLOCATION <- str_extract(rmks_vor_rwy$REMARKS,'RWY\\s?[0-9]{2}')
+  rmks_vor_rwy$RWYLOCATION <- str_extract(rmks_vor_rwy$REMARKS,'RWY\\s?[0-9]{2}[L|R]?')
   rmks_vor_rwy$DATASET <- "NAVAID/RUNWAY"
   # Extract all NA locations (OUT OF 4)
   rmks_vor_rwy_completed <- rmks_vor_rwy[!is.na(rmks_vor_rwy$UASLOCATION)]   #1
@@ -288,7 +312,7 @@ rmks_vor_rwy <- rmks_vor2[grepl("RWY",rmks_vor2$REMARKS)] #4 (DIVE DEEPER)
   
 ##---->       VOR with RUNWAYS DATASET##
   rmks_vor_rwy_completed <- rbind(rmks_vor_rwy_completed,rmks_vor_rwy_na)
-    rmks_vor_rwy_completed$RWYLOCATION <- gsub("(RWY)([0-9]{2})","\\1 \\2",rmks_vor_rwy_completed$RWYLOCATION)
+#    rmks_vor_rwy_completed$RWYLOCATION <- gsub("(RWY)([0-9]{2})","\\1 \\2",rmks_vor_rwy_completed$RWYLOCATION)
   write.csv(rmks_vor_rwy_completed,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\4.2-Incidents_Regex_VOR_RWY.csv",row.names=FALSE)
 
 rmks_vor2 <- rmks_vor2[!grepl("RWY",rmks_vor2$REMARKS)]   #66
@@ -323,9 +347,12 @@ rmks_vor2 <- rmks_vor2[!grepl("RWY",rmks_vor2$REMARKS)]   #66
       rmks_vor3_na$UASLOCATION <- str_extract(rmks_vor3_na$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?((M|m)iles|MILES)\\s?(NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)(\\s?(of|OF)*\\s?)([A-Z]{3,5})')
       # Extract all NA locations (OUT OF 29)
       rmks_vor4 <- rmks_vor3_na[!is.na(rmks_vor3_na$UASLOCATION)]    #2
-        rmks_vor4$UASLOCATION <- gsub("north","N",rmks_vor4$UASLOCATION)
         rmks_vor4$UASLOCATION <- gsub("([0-9]*[0-9]\\s?miles\\s?)([A-Z]{1,3}\\s)([A-Z]{3,5})","\\1\\2of \\3",rmks_vor4$UASLOCATION)
         rmks_vor_completed <- rbind(rmks_vor_completed,rmks_vor4) #47
+        
+##---->       VOR with MILES##
+        write.csv(rmks_vor4,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\4.3-Incidents_Regex_VOR_MILES.csv",row.names=FALSE)        
+        
       rmks_vor4_na <- rmks_vor3_na[is.na(rmks_vor3_na$UASLOCATION)] #19 (DIVE DEEPER)
         # Attempt to find XXX miles XXX (of) (XXX) format (modified)
         rmks_vor4_na$REMARKS <- gsub("Shafter","MIT",rmks_vor4_na$REMARKS) #VOR CODE
@@ -333,11 +360,10 @@ rmks_vor2 <- rmks_vor2[!grepl("RWY",rmks_vor2$REMARKS)]   #66
         rmks_vor4_na$UASLOCATION <- str_extract(rmks_vor4_na$REMARKS,'[0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*\\s?(NORTH|SOUTH|EAST|WEST|(N|n)orth|(S|s)outh|(E|e)ast|(W|w)est|N|S|E|W|n|s|e|w|NW|NE|SW|SE|nw|ne|sw|se|SSE|SSW|SNE|SNW|NNE|NSE|NNE|NNW|WSW|WNW|WSE|WNE|ENE|ESE|ESW|ENW|sse|ssw|sne|snw|nne|nnw|wsw|wnw|wse|wne|ene|ese|esw|enw)(\\s?(of|OF)*\\s?)([A-Z]{3,5})')
         # Extract all NA locations (OUT OF 19)
         rmks_vor5 <- rmks_vor4_na[!is.na(rmks_vor4_na$UASLOCATION)]    #3
-        rmks_vor5$UASLOCATION <- gsub("west","W",rmks_vor5$UASLOCATION)
         rmks_vor_completed <- rbind(rmks_vor_completed,rmks_vor5) #50
           
 ##---->       VOR with NONM##
-        write.csv(rmks_vor5,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\4.3-Incidents_Regex_VOR_NONM.csv",row.names=FALSE)
+        write.csv(rmks_vor5,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\4.4-Incidents_Regex_VOR_NONM.csv",row.names=FALSE)
           
         rmks_vor5_na <- rmks_vor4_na[is.na(rmks_vor4_na$UASLOCATION)] #16 (DIVE DEEPER)
           rmks_vor5_na$REMARKS <- gsub("Sea Isle VORTAC","SIE VOR",rmks_vor5_na$REMARKS) #VOR CODE
@@ -350,7 +376,7 @@ rmks_vor2 <- rmks_vor2[!grepl("RWY",rmks_vor2$REMARKS)]   #66
           rmks_vor5_na$UASLOCATION <- str_extract(rmks_vor5_na$REMARKS,'([A-Z]{3,5})(\\sVOR)')
           
 ##---->       VOR with VICINITYONLY##
-          write.csv(rmks_vor5_na,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\4.4-Incidents_Regex_VOR_VICINITYONLY.csv",row.names=FALSE)
+          write.csv(rmks_vor5_na,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\4.5-Incidents_Regex_VOR_VICINITYONLY.csv",row.names=FALSE)
           
           rmks_vor_completed <- rbind(rmks_vor_completed,rmks_vor5_na) #66
           rmks_vor_completed <- rbind(rmks_vor_completed,rmks_vor_rwy_completed, fill=TRUE)
@@ -381,7 +407,7 @@ std_vor <- std[grep(paste(pattern,collapse="|"),std$REMARKS)] #3 (DIVE DEEPER)
   std_vor$UASLOCATION <- gsub("([0-9]*\\-*\\/*[0-9]*\\.*[0-9]\\.*[0-9]*)(NM)","\\1 \\2",std_vor$UASLOCATION)
   std_completed <- std_vor #3
   
-##---->       GRACE INCIDENTS with VOR DATASET##
+##---->       MISSING STANDARD INCIDENTS with VOR DATASET##
     write.csv(std_vor,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\6.3-MissingStandard_Incidents_VOR.csv",row.names=FALSE) #14 #DONE  
   
 std <- std[!grep(paste(pattern,collapse="|"),std$REMARKS)]    #27 (DIVE DEEPER {RWY AND REGULAR})
@@ -404,7 +430,7 @@ std <- std[!grep(paste(pattern,collapse="|"),std$REMARKS)]    #27 (DIVE DEEPER {
       std2_rwy$RWYLOCATION <- gsub("(RWY\\s)(8|9)","\\10\\2",std2_rwy$RWYLOCATION)
       std_completed <- rbind(std_completed,std2_rwy, fill=TRUE) #17
       
-##---->       GRACE INCIDENTS with RUNWAYS DATASET##
+##---->       MISSING STANDARD INCIDENTS with RUNWAYS DATASET##
     write.csv(std2_rwy,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\6.2-MissingStandard_Incidents_RWY.csv",row.names=FALSE) #14 #DONE
   
   # Extract all other locations 
@@ -435,7 +461,7 @@ std <- std[!grep(paste(pattern,collapse="|"),std$REMARKS)]    #27 (DIVE DEEPER {
       std3 <- std2[!grep(paste(pattern,collapse="|"),std2$REMARKS)] #11
       std_completed <- rbind(std_completed,std3, fill=TRUE) #28
     
-##---->       GRACE INCIDENTS with FULL FORMAT DATASET##
+##---->       MISSING STANDARD INCIDENTS with FULL FORMAT DATASET##
         write.csv(std3,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\6.1-MissingStandard_Incidents_AIRPORT_FULLFORMAT.csv",row.names=FALSE) #11 #DONE
       std_waypoint <- std2[grep(paste(pattern,collapse="|"),std2$REMARKS)] #2
       std_waypoint$waypoint_lat <- c("41° 57' 19.140\" N","37° 33' 02.960\" N")
@@ -443,7 +469,7 @@ std <- std[!grep(paste(pattern,collapse="|"),std$REMARKS)]    #27 (DIVE DEEPER {
       std_waypoint$DATASET <- "LAT/LONG PROVIDED"
       std_completed <- rbind(std_completed,std_waypoint, fill=TRUE) #30
     
-##---->       GRACE INCIDENTS with WAYPOINTS DATASET##
+##---->       MISSING STANDARD INCIDENTS with WAYPOINTS DATASET##
       write.csv(std_waypoint,"C:\\Users\\maygo\\OneDrive\\Documents\\DAEN690-FAA-UAS\\6.4-MissingStandard_Incidents_AIRPORT_WAYPOINTS.csv",row.names=FALSE) #2 DONE
       
 std_completed <- arrange(std_completed,DATE)
